chaged z-index of sidebar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -105,6 +105,8 @@ table {
 	width: 25%;
 	background-color: #f8f8f8;
 	padding: 10px;
+	z-index: -1;
+
 	article {
 		article {
 			border-left: 3px solid #ff2751;
