--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ table caption {
   width: 25%;
   background-color: #f8f8f8;
   padding: 10px;
+  z-index: -1;
 }
 .sidebar article article {
   border-left: 3px solid #ff2751;
